# comprehensive-rust

./: .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  TRANSLATIONS.md  backdated_sources.bzl  book.toml  languages.bzl  tool_hub.bzl
.github/workflows/: build.sh  build.yml  publish.yml
.github/workflows/install-mdbook/: action.yml
.github/workflows/setup-rust-cache/: action.yml
material/src/enums/: variant-payloads.md
material/src/exercises/day-2/: health-statistics.md
material/src/pattern-matching/: destructuring-arrays.md  destructuring-structs.md  match-guards.md
mdbook-course/: BUILD.bazel
mdbook-exerciser/: BUILD.bazel
po/: BUILD.bazel  no.po  sv.po
src/: 404.md  SUMMARY.md  about-the-speaker.md  credits.md
src/borrowing/: exercise.md  exercise.rs  solution.md
src/generics/: solution.md
src/idiomatic/leveraging-the-type-system/: newtype-pattern.md
src/idiomatic/leveraging-the-type-system/extension-traits/: trait-method-conflicts.md
src/idiomatic/leveraging-the-type-system/typestate-pattern/typestate-generics/: complete.md  property.md  root.md  struct.md
src/iterators/: solution.md
src/lifetimes/: solution.md
src/memory-management/: solution.md
src/methods-and-traits/: solution.md
src/modules/: solution.md
src/pattern-matching/: solution.md
src/references/: solution.md
src/testing/: solution.md
