load("//:languages.bzl", "LANGUAGES")
load("//:tool_hub.bzl", "tool_hub")

tool_hub(
    name = "mdbook-plugins",
    tools = {
        "//mdbook-course": "mdbook-course",
        "//mdbook-exerciser": "mdbook-exerciser",
        "@mdbook_plugins//:mdbook-i18n-helpers__mdbook-gettext": "mdbook-gettext",
        "@mdbook_plugins//:mdbook-i18n-helpers__mdbook-xgettext": "mdbook-xgettext",
        "@mdbook_plugins//:mdbook-pandoc__mdbook-pandoc": "mdbook-pandoc",
        "@svgbob_plugin//:mdbook-svgbob__mdbook-svgbob": "mdbook-svgbob",
        "@mdbook_plugins//:mdbook-linkcheck2__mdbook-linkcheck2": "mdbook-linkcheck2",
    },
)

[
    genrule(
        name = "backdated-%s" % lang,
        srcs = ["@backdated_sources//:%s.tar.gz" % lang],
        outs = ["backdated-%s.tar.gz" % lang],
        cmd = "cp $< $@",
    )
    for lang in LANGUAGES
]
